syntax = "proto3";
package service.tigerbeetle;

option go_package = "generated/tigerbeetle-protobuf";

service TigerbeetleService {
  rpc CreateAccount(Empty) returns (AccountId);
  rpc LookupAccount(AccountId) returns (Account);
  rpc CreatePendingTransfer(CreatePendingRequest) returns (TransferId);
  rpc PostPendingTransfer(PostPendingTransferRequest) returns (TransferId);
  rpc VoidPendingTransfer(VoidPendingTransferRequest) returns (TransferId);
  rpc LookupTransfer(TransferId) returns (Transfer);
  rpc CreateTransfer(CreateTransferRequest) returns (TransferId);
  rpc EnsureSystemFloatAccountExists(Empty) returns (Empty);
  rpc GetAccountTransfers(GetAccountTransfersRequest) returns (GetAccountTransfersResponse);
}

message GetAccountTransfersRequest {
  string          user_id       = 1;
  optional string min_timestamp = 2;
  optional string max_timestamp = 3;
  optional uint32 limit         = 4;
}

message GetAccountTransfersResponse {
  repeated Transfer transfers = 1;
}

message Empty {}

message CreateTransferRequest {
  string debit_account_id  = 1;
  string credit_account_id = 2;
  string amount            = 3;
}

message Transfer {
  reserved 5, 6, 7;
  string transfer_id       = 1;
  string debit_account_id  = 2;
  string credit_account_id = 3;
  string amount            = 4;
  // optional string userData128 = 5;
  // optional uint64 userData64 = 6;
  // optional uint32 userData32 = 7;
  string timestamp = 8;
  bool   pending   = 9;
  bool   posted    = 10;
  bool   voided    = 11;
}

message PostPendingTransferRequest {
  string debit_account_id    = 1;
  string credit_account_id   = 2;
  string amount              = 3;
  string pending_transfer_id = 4;
}

message VoidPendingTransferRequest {
  string debit_account_id    = 1;
  string credit_account_id   = 2;
  string amount              = 3;
  string pending_transfer_id = 4;
}

message TransferId {
  string transfer_id = 1;
}

message CreatePendingRequest {
  string debit_account_id  = 1;
  string credit_account_id = 2;
  string amount            = 3;
  // optional string userData128 = 4;
  // optional uint64 userData64 = 5;
  // optional uint32 userData32 = 6;
}

message AccountId {
  string account_id = 1;
}

message Account {
  string          account_id      = 1;
  string          debits_pending  = 2;
  string          debits_posted   = 3;
  string          credits_pending = 4;
  string          credits_posted  = 5;
  uint32          code            = 6;
  uint64          timestamp       = 7;
  uint32          flags           = 8;
  uint32          ledger          = 9;
  optional string user_data128    = 10;
  optional uint64 user_data64     = 11;
  optional uint32 user_data32     = 12;
}
